--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.4.2",
+    "classnames": "^2.3.2",
+    "firebase": "^9.22.0",
+    "framer-motion": "^10.12.11",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
